--- a/index.html
+++ b/index.html
@@ -222,6 +222,14 @@
 <script id="template-author-link" type="text/x-handlebars-template">
   <li><a href="#author-{{ id }}"><span>{{ author }}</span></a></li>
 </script>
+<script id="template-tag-cloud-link" type="text/x-handlebars-template">
+  {{#each tags}}
+    <li><a href="#tag-{{ tag }}" class="{{ className }}">{{ tag }} ({{ count }})</a></li>
+  {{/each}}
+</script>
+<script id="template-author-list-link" type="text/x-handlebars-template">
+  <li><a href="#author-{{id}}">{{author}} ({{count}})</a></li>
+</script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.0/handlebars.min.js"></script>
 <script src="js/script.js"></script>
 </body>
